# pkg/api/handler/handler.go
@@ -31,11 +31,8 @@ func (h *Handler) InitRoutes() http.Handler {
 
 	apiRouter := r.PathPrefix("/api/v1").Subrouter()
 	apiRouter.HandleFunc("/customers/{uid}/orders", h.customerOrders).Methods("GET")
+	apiRouter.HandleFunc("/orders/{uid}", h.order).Methods("GET")
 	apiRouter.HandleFunc("/order", h.newOrder).Methods("POST")
-	apiRouter.HandleFunc("/delivery", h.newDelivery).Methods("POST")
-	apiRouter.HandleFunc("/payment", h.newPayment).Methods("POST")
-	apiRouter.HandleFunc("/customer", h.newCustomer).Methods("POST")
-	apiRouter.HandleFunc("/item", h.newItem).Methods("POST")
 
 	apiRouter.Use(
 		h.panicRecoveryMiddleware,
