# pkg/model/core/customer.go
@@ -1,6 +1,0 @@
-package core
-
-type Customer struct {
-	CustomerUid string `json:"customer_uid"`
-	Email       string `json:"email"`
-}
