# pkg/model/core/order.go
@@ -1,21 +1,7 @@
 package core
 
-import "time"
-
 type Order struct {
-	ID                int       `json:"id"`
-	OrderUID          string    `json:"order_uid"`
-	TrackNumber       string    `json:"track_number"`
-	Entry             string    `json:"entry"`
-	Delivery          Delivery  `json:"delivery"`
-	Payment           Payment   `json:"payment"`
-	Items             []Item    `json:"items"`
-	Locale            string    `json:"locale"`
-	InternalSignature string    `json:"internal_signature"`
-	CustomerID        string    `json:"customer_id"`
-	DeliveryService   string    `json:"delivery_service"`
-	ShardKey          string    `json:"shardkey"`
-	SMID              int       `json:"sm_id"`
-	DateCreated       time.Time `json:"date_created"`
-	OofShard          string    `json:"oof_shard"`
+	ID       int    `db:"id"`
+	OrderUID string `db:"order_uid"`
+	Data     []byte `db:"data"`
 }
